--- a/style.css
+++ b/style.css
@@ -1,92 +1,115 @@
-html {
-    font-family: sans-serif;
-  }
-  
-  body {
-    width: 300px;
-    max-width: 750px;
-    min-width: 480px;
-    margin: 0 auto;
-    background-color: #212121;
-  }
-  
-  .lastResult {
-    color: white;
-    padding: 7px;
-  }
-  
-  .guesses {
-    color: white;
-    padding: 7px;
-  }
-  
-  button {
-    background-color: #141414;
-    color: #fff;
-    width: 250px;
-    height: 50px;
-    border-radius: 25px;
-    font-size: 30px;
-    border-style: none;
-    margin-top: 30px;
-    /* margin-left: 50px; */
-  }
-  
-  #subt {
-    background-color: #161616;
-    color: #ffffff;
-    width: 200px;
-    height: 50px;
-    border-radius: 10px;
-    font-size: 20px;
-    border-style: none;
-    margin-top: 50px;
-    /* margin-left: 75px; */
-  }
-  
-  #guessField {
-    color: #000;
-    width: 250px;
-    height: 50px;
-    font-size: 30px;
-    border-style: none;
-    margin-top: 25px;
-  
-    /* margin-left: 50px; */
-    border: 5px solid #6c6d6d;
-    text-align: center;
-  }
-  
-  #guess {
-    font-size: 55px;
-    /* margin-left: 90px; */
-    margin-top: 120px;
-    color: #fff;
-  }
-  
-  .guesses {
-    background-color: #7a7a7a;
-  }
-  
-  #wrapper {
-    box-sizing: border-box;
-    text-align: center;
-    width: 450px;
-    height: 550px;
-    background-color: #474747;
-    color: #fff;
-    font-size: 25px;
-  }
-  
-  h1 {
-    background-color: #161616;
-  
-    color: #fff;
-    text-align: center;
-  }
-  
-  p {
-    font-size: 16px;
-    text-align: center;
-  }
-  
+/* Reset some default styles */
+body, h1, p, form, input {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* General body styling */
+body {
+  background-color: #282c34;
+  color: #fff;
+  font-family: 'Arial', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+
+/* Navigation styling */
+nav {
+  background-color: #20232a;
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
+}
+
+nav a {
+  color: #61dafb;
+  margin: 0 1rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+/* Wrapper styling */
+#wrapper {
+  text-align: center;
+  background-color: #3b4048;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  width: 80%;
+  max-width: 400px;
+}
+
+/* Heading and paragraph styling */
+h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  margin: 0.5rem 0;
+}
+
+/* Form styling */
+form {
+  margin: 1rem 0;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 2px solid #61dafb;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+}
+
+input[type="submit"] {
+  background-color: #61dafb;
+  color: #282c34;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+input[type="submit"]:hover {
+  background-color: #21a1f1;
+}
+
+/* Result paragraphs styling */
+.resultParas {
+  margin-top: 1rem;
+}
+
+.guesses, .lastResult, .lowOrHi {
+  font-size: 1.2rem;
+}
+
+/* New game button styling */
+#newGame {
+  display: inline-block;
+  background-color: #21a1f1;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  margin-top: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+#newGame:hover {
+  background-color: #1d90d8;
+}
